style: fix z-index and change chart wrapper basic design

--- a/frontend/src/components/dashboard/dashboard.scss
+++ b/frontend/src/components/dashboard/dashboard.scss
@@ -14,7 +14,7 @@
     padding: 10px;
     padding-left: 0;
     width: 100%;
-    z-index: 4000;
+    z-index: 2000;
 
     #incomes, #expenses, #transfers, #stats {
       border: 1px solid cadetblue;
