--- a/frontend/src/components/stats/stats.scss
+++ b/frontend/src/components/stats/stats.scss
@@ -6,14 +6,22 @@
   width: 100%;
   height: 100%;
 
-  @include flex(row, flex-start, center, wrap);
+  @include flex(row, center, center, wrap);
+  flex: 0 0 calc(33.00% - 20px); 
+  gap: 20px;
 
-  div {
-    border: 1px solid cadetblue;
-    margin: 5px;
-    height: 320px;
-    text-align: center;
-    flex: 0 0 calc(33.00% - 20px); 
+  .chart-container {
+    @include flex(column, center, center);
+    border: 1px solid #DADADA;
+    box-shadow: 1px 1px 5px #DADADA;
+    border-radius: 3px;
+
+    .chart {
+      border: none;
+      margin: 5px;
+      height: 320px;
+      text-align: center;
+    }
 
   }
 
